flapivor/tests/m3/hopix/typechecker/bad/44-record-field-03.hopix
type T = { x : Int }

type U = { y : Int }

val r : T = { x = 0 }<>

val ry : Int = r.y